# grahOCR

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  EVALUATION.md  Makefile  README.md  TASK_RESPONSE.md  docker-compose.yml  graphocr-all-docs.html  pyproject.toml
config/: agents.yaml  dspy_config.yaml  monitoring.yaml  neo4j_rules.yaml  pipeline.yaml  rag.yaml
docs/: COMPLIANCE_FEDERATION.md  DSPY_OPTIMIZATION.md  INFRASTRUCTURE_CONFIG.md  LAYER1_OCR_SPATIAL_FOUNDATION.md  LAYER2_ADVERSARIAL_VERIFICATION.md  LAYER3_TIERED_INFERENCE.md  RAG_TEMPORAL_RETRIEVAL.md  README.md
sample data/: README.md  graphocr_report.html  graphocr_report.json
sample data/images/: graphocr_report.html  graphocr_report.json
sample data/pdfs/: graphocr_report.html  graphocr_report.json  pipeline_test_column.html  pipeline_test_column.json
scripts/: batch_test.py  calibrate_threshold.py  ingest_policies.py  seed_neo4j.py  setup_dbs.py  test_document.py
src/graphocr/: app.py  cli.py  pipeline.py  problemStatment.txt
src/graphocr/audit/: __init__.py  dashboard.py  failure_analyzer.py
src/graphocr/compliance/: data_residency.py  jurisdiction.py
src/graphocr/core/: async_utils.py  config.py  exceptions.py  logging.py  types.py
src/graphocr/dspy_layer/: gradient_monitor.py  metrics.py  modules.py  optimizers.py  supervisor.py
src/graphocr/layer1_foundation/: failure_classifier.py  ingestion.py  language_detector.py  metadata_enricher.py  ocr_engine.py  ocr_paddleocr.py  ocr_surya.py  reading_order.py  spatial_assembler.py
src/graphocr/layer2_verification/agents/: challenger.py  extractor.py  failure_store.py  graph_builder.py  postmortem.py  validator.py
src/graphocr/layer2_verification/knowledge_graph/: client.py  rule_engine.py  schema_loader.py  validators.py
src/graphocr/layer3_inference/: cheap_rail.py  circuit_breaker.py  output_assembler.py  traffic_controller.py  vlm_consensus.py
src/graphocr/models/: __init__.py  agent_state.py  claim.py  document.py  extraction.py  failure.py  graph_nodes.py  policy.py  token.py
src/graphocr/monitoring/: langfuse_tracer.py  langsmith_tracer.py  metrics_collector.py
src/graphocr/rag/: context_injector.py  embeddings.py  policy_chunker.py  retriever.py  vector_store.py
tests/: conftest.py
tests/fixtures/sample_policies/: standard_2018.json  standard_2025.json
tests/integration/: test_end_to_end.py
tests/unit/: test_app.py  test_circuit_breaker.py  test_dspy_metrics.py  test_failure_classifier.py  test_rag_retriever.py  test_reading_order.py  test_rule_engine.py  test_self_healing.py  test_spatial_assembler.py  test_token_model.py  test_traffic_controller.py
(+3 files in other folders)
